--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,11 +1,26 @@
-<h1>{{myData.name}}</h1>
-<div>
-    <ul class="info">
-        {{#with myData.aboutme}}
-        <li><span class="first-block">Full Name : </span><span class="second-block">{{FullName}}</span></li>
-        <li><span class="first-block">Phone : </span><span class="second-block">{{Phone}}</span></li>
-        <li><span class="first-block">E-mail : </span><span class="second-block"><a href="{{Email}}">{{Email}}</a></span></li>
-        <li><span class="first-block">Address : </span><span class="second-block">{{Address}}</span></li>
-        {{/with}}
-    </ul>
+<div class="section" id="about">
+  <div class="container">
+    <div class="card" data-aos="fade-up" data-aos-offset="10">
+      <div class="row">
+        <div class="col-lg-6 col-md-12">
+          <div class="card-body">
+            <div class="h4 mt-0 title">About</div>
+			<ul class="info">
+                {{#with myData.about}}
+                    <li><span class="first-block">Full Name : </span><span class="second-block">{{FullName}}</span></li>
+                    <li><span class="first-block">Gender : </span><span class="second-block">{{Gender}}</span></li>
+                    <li><span class="first-block">Age : </span><span class="second-block">{{Age}}</span></li>
+                    <li><span class="first-block">Birthday : </span><span class="second-block">{{Birthday}}</span></li>
+                    <li><span class="first-block">Nationality : </span><span class="second-block">{{Nationality}}</span></li>
+                    <li><span class="first-block">Religion : </span><span class="second-block">{{Religion}}</span></li>
+                    <li><span class="first-block">Phone : </span><span class="second-block">{{Phone}}</span></li>
+                    <li><span class="first-block">E-mail : </span><span class="second-block"><a href="{{Email}}">{{Email}}</a></span></li>
+                    <li><span class="first-block">Address : </span><span class="second-block">{{Address}}</span></li>
+                    {{/with}}
+			</ul>
+             </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
