--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,7 +4,7 @@
       <div class="page-header-image" data-parallax="true" style="background-image: url('images/cc-bg-1.jpg');"></div>
       <div class="container">
         <div class="content-center">
-          <div class="cc-profile-image"><a href="#"><img src="images/anthony.jpg" alt="Image"/></a></div>
+          <div class="cc-profile-image"><a href="/"><img src="images/profile.jpg" alt="Image"/></a></div>
           <div class="h2 title">{{myData.name}}</div>
           <p class="category text-white">{{myData.work}}</p>
         </div>
