--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -23,22 +23,23 @@
             <div class="collapse navbar-collapse justify-content-end" id="navigation">
               <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="/">Portfolio</a></li>
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="/about">About</a></li>
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="/skills">Skills</a></li>
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="/education">Education</a></li>
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="/experience">Experience</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#education">Education</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Skills</a></li>
               </ul>
             </div>
           </div>
         </nav>
       </div>
   </header>
-    
+  <main>
     <div id="colorlib-main">
-      <div class="page-content">
+      
         {{{body}}}
-      </div>
+      
     </div>
+  </main>
 	<footer class="footer">
       <div class="container text-center"><a class="cc-facebook btn btn-link" href="#"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a class="cc-twitter btn btn-link " href="#"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a><a class="cc-google-plus btn btn-link" href="#"><i class="fa fa-google-plus fa-2x" aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="#"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
       
